syntax = "proto3";
package wapp.account;

option go_package = "github.com/dark-vinci/wapp/backend/sdk/grpc/account";

message PingRequest {
  string data = 1;
  string requestID = 2;
}

message CreateUserRequest {
  string request_id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  string email = 5;
}

message LoginRequest {
  string request_id = 1;
  string password = 2;
  string phone_number = 3;
}
